--- a/_config.yml
+++ b/_config.yml
@@ -77,4 +77,6 @@ theme: hexo-theme-next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:longtengfei2016/hexo-website.git
+  branch: master
