--- a/_config.yml
+++ b/_config.yml
@@ -78,5 +78,5 @@ theme: hexo-theme-next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:longtengfei2016/hexo-website.git
+  repo: git@47.94.211.9:/home/web/blog.git
   branch: master
