--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "leancloud-realtime": "^3.5.7",
+    "leancloud-storage": "^3.4.2"
   }
 }
